# FinanceAnalyzer-Backend

./: .gitignore  API_V2_CONTRACT.md  ENHANCEMENTS.md  PDF_PARSER_README.md  PROJECT_SUMMARY.md  README.md  README_V2.md  SETUP_GUIDE.md  analyze_existing_data.py  analyze_transactions.py  api_contract.json  api_server.py  api_server_old.py  api_v2_server.py  check_duplicates.py  cli_runner.py  comprehensive_email_scanner.py  comprehensive_financial_analytics.py  comprehensive_financial_report.json  comprehensive_transactions.json  debug_all_hsbc.py  debug_gmail.py  debug_gmail_reader.py  email_pattern_analyzer.py  email_transaction_service.py  email_transactions.json  email_transactions_multi_account.json  final_comprehensive_report.py  final_report_status.json  financial_analysis_20250824_195315.json  financial_emails_20250824_195315.json  icici_enhanced_parser.py  icici_results.json  parse_savings_accounts.py  parse_statements.py  parser_code_20250824_195315.json  pdf_statement_parser.py  pdf_statement_parser_old.py  pyproject.toml  quick_test.py  (+13 more)
credentials/: enhanced_gmail_reader.py  gmail_reader.py
src/: __init__.py  api_models.py  api_transformers.py  api_v2_models.py  api_v2_transformers.py  bank_statement_reader.py  cli.py  constants.py  data_loader.py  data_transformer.py  example_usage.py  excel_models.py  excel_writer.py  finance_analyzer.py  gmail_reader.py  load_and_clean.py  multi_file_analyzer.py  portfolio_analyzer.py  transaction_processor.py  upi_categorizer.py  utils.py
statements/creditcard/: statement_data_HDFC Bank_credit_card_202508.json  (+3 more)
(+6 files in other folders)
