[tool.poetry]
name = "financeanalyzer-backend"
version = "0.1.0"
description = "Backend API for FinanceAnalyzer with CLI compatibility"
authors = ["Jyotirmay Sethi <jyotirmays123@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
numpy = "^1.25.2"
python-dateutil = "^2.8.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "start_server:main"
